/*
 * $Id: ChangeLog,v 1.4647 2005/11/19 16:27:01 marceloanelli Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-11-19 15:30 UTC-0300 Luiz Rafael Culik<luiz at xharbour.com.br>
  * source/ct/getsecrt.prg
    ! added oget:undo() when  esc key is presses
  * contrib/hbzlib/zip.c
    contrib/hbzlib/zipnew.cpp
    ! fixed hb_unzipfile() when invalid file os passed  

2005-11-19 12:20 UTC-0400 Marcelo Anelli <marceloanelli@users.sourceforge.net>
  * source\rtl\gtwvt\gtwvt.c
    ! Fixded function kbdShiftsState for keys NumLock, CapsLock and ScrolLock
      for Toggled keys instead for Key Down
  * contrib\gtwvw\gtwvw.c
    + Added function kbdShiftsState for using with GTINFO(GTI_KBDSHIFTS)

2005-11-19 18:50 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * include/hbapicdp.h
  * source/codepage/Makefile
  + source/codepage/cpbgmik.c
  + source/codepage/cpbgwin.c
  + source/codepage/ucmik.c
  * source/lang/Makefile
  + source/lang/msgbgmik.c
    + Added Bulgarian MIK and 1251 codepages, thanks to Rosen Vladimirov.
      Non-GNU Makefiles need to be updated!
  * source/lang/msgbgwin.c
    ! Fixed a typo.

2005-11-18 19:08 UTC-0400 Marcelo Anelli <marceloanelli@users.sourceforge.net>
  * source\rtl\gtwvt\gtwvt.c
    + Added function kbdShiftsState for using with GTINFO(GTI_KBDSHIFTS)

2005-11-18 19:10 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
   * ChangeLog
     * Ooops... :) I was thinking today is the 17th...

2005-11-18 19:05 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
   * source/rtl/tbrowse.prg
     * Removed unused iVar

2005-11-18 13:55 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
   * source/rtl/tbrowse.prg
     ! ::ColorRect() should not do a ::Hilite() on current cell
     ! multiple ::ColorRect()s can now be set before TBrowse is stable
